--- a/carousel/index.html
+++ b/carousel/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link type="text/css" rel="stylesheet" href="./css/carousel.css"/>
-    <script src="http://libs.baidu.com/jquery/1.9.1/jquery.js" type="text/javascript"></script>
+    <script src="https://libs.baidu.com/jquery/1.9.1/jquery.js" type="text/javascript"></script>
     <script src="./js/carousel.js" type="text/javascript"></script>
 </head>
 <body style="padding:50px;">
