--- a/comment-app/index.html
+++ b/comment-app/index.html
@@ -1,1 +1,18 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <title>React App</title>
+    <link href="./css/main.efd2ca82.css" rel="stylesheet">
+</head>
+
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="text/javascript" src="./js/main.2ccf8a68.js"></script>
+</body>
+
+</html>
